<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="chart">Select charts to display</string>
    <string name="step_chart">Step chart</string>
    <string name="distance_chart">Distance chart</string>
    <string name="calo_chart">Calo chart</string>
    <string name="general">General</string>
    <string name="statistic">Statistic</string>
    <string name="target">Target</string>
    <string name="motion">Motion warming (minute)</string>
    <string name="time_motion">Time to motion </string>
    <string name="personalInfor">Personal Information</string>
    <string name="height">Height (cm) </string>
    <string name="weight">Weight (kg) </string>
    <string name="age">Age </string>
    <string name="value">0</string>
    
    
    <string name="app_name">SmartWatch</string>
    <string name="sms_dialog">Có tin nhắn mới</string>
    <string name="call_dialog">INCOMING CALL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titleBluetooth">Bluetooth</string>
    <string name="titleBrightness">Brightness</string>
    <string name="titleBarSetting">Setting</string>
    <string name="titleScreenOffTimeout">Screen Off Timeout</string>
     <string name="reset">Reset data</string>
    <string name="timedate">Date &amp; Time</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="reply">Quick reply</string>
    <string name="callBack">Call back</string>
    <string name="restart">Restart</string>
    <string name="iconIncomeCall">Icon Income Call</string>
    <string name="iconIncomeMessage">Icon Income Message</string>
    <string name="iconIncomeEmail">Icon Income Email</string>
    <string name="zero">0</string>
    <string name="seconds">Seconds</string>
    <string name="date">Tue, October 25</string>
    <string name="time">10:09</string>
    <string name="fifteenSeconds">15 seconds</string>
    <string name="thirtySeconds">30 seconds</string>
    <string name="oneMinute">1 minute</string>
    <string name="twoMinutes">2 minutes</string>
    <string name="fiveMinutes">5 minutes</string>
    <string name="tenMinutes">10 minutes</string>
    <string name="thirtyMinutes">30 minutes</string>
    <string name="vietnamese">Việt Nam</string>
    <string name="english">English</string>
    <string name="all_call">All call</string>
    <string name="all_sms">All sms</string>
    <string name="all_email">All email</string>
    <string name="event">Event</string>
    <string name="timer">Timer</string>
    <string name="set_time">Set Time</string>
    <string name="repeat_date">Repeat Date</string>
    <string name="repeat">Repeat</string>
    <string name="stop_watch">Stop watch</string>
    <string name="stateCall">Call state</string>
    <string name="line">Line</string>
    <string name="ok">OK</string>
    <string name="hai_cham">:</string>
    <string name = "number_picker">Number picker</string>
    <string name="cancel">Cancel</string>
    <string name="pedometer">Pedometer</string>
    <string name="step">STEP: </string>
    <string name="step_unit"> step</string>
    <string name="distance">DISTANCE: </string>
    <string name="distance_unit"> m</string>
    <string name="calories">CALORIES: </string>
    <string name="calories_unit"> calo</string>
    <string name="health_care">Heart rate</string>
    <string name="heart_rate">95 bpm</string>
    <string name="beat_per_minute">(beat per minute)</string>
    <string name="conclusion">your heart rate is normal</string>
    <string name="stopwatch">00:00:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="lap">Lap</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_setting">Alarm settings</string>
    <string name="done">Done</string>
    <string name="time_alarm">Time</string>
    <string name="snooze_duration">Snooze duration</string>
    <string name="snooze_duration_content">5 minutes</string>
    <string name="reapeat_content">Never</string>
    <string name="add">Add</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thurday">Thurday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="model">Model:</string>
    <string name="model_content">Bwatch 1.0</string>
    <string name="version">Software Version:</string>
    <string name="version_content">Android 4.4.2</string>
    <string name="serial">Serial Number: </string>
    <string name="serial_content"> </string>
    <string name="build_number">Build Number: </string>
    <string name="build_number_content"> </string>
    <string name="battery">Battery: </string>
    <string name="battery_content">battery</string>
    <string name="system_updates">System Updates: </string>
    <string name="system_updates_content"> </string>
    <string name="legal_notices">Legal notices: </string>
    <string name="legal_notices_content"> </string>
    <string name="back">Back</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>

</resources>