<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SizeActivityLight"
    android:background="#212121"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/stepDistanceBar"
        style="@style/NameMenuBar"
        android:text="@string/pedometer"
        android:textColor="#ff7e00" 
        android:gravity="center"/>
  
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/stepIcon"
            android:layout_width="47dp"
            android:layout_height="65dp"
            android:contentDescription="@string/pedometer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/stepCountLabel"
            style="@style/TextViewPedometer"
            android:text="@string/step" />

        <TextView
            android:id="@+id/stepCount"
            style="@style/TextValuePedometer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/stepUnit"
            style="@style/TextViewPedometer"
            android:text="@string/step_unit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/distanceLabel"
            style="@style/TextViewPedometer"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/distance"
            style="@style/TextValuePedometer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/distanceUnit"
            style="@style/TextViewPedometer"
            android:text="@string/distance_unit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/caloriesLabel"
            style="@style/TextViewPedometer"
            android:text="@string/calories" />

        <TextView
            android:id="@+id/calories"
            style="@style/TextValuePedometer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/caloriesUnit"
            style="@style/TextViewPedometer"
            android:text="@string/calories_unit" />
    </LinearLayout>

</LinearLayout>