<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="226dp"
    android:background="#212121"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/modelContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model_content"
                android:textColor="#7a7a7a" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/versionContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_content"
                android:textColor="#7a7a7a" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/serialContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_content"
                android:textColor="#7a7a7a" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/buildNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_number"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/buildNumberContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_number_content"
                android:textColor="#7a7a7a" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" 
            android:orientation="vertical" >

            <TextView
                android:id="@+id/battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/batteryContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_content"
                android:textColor="#7a7a7a" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/systemUpdates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_updates"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/systemUpdatesContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_updates_content"
                android:textColor="#7a7a7a" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/legalNotices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legal_notices"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/legalNoticesContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legal_notices_content"
                android:textColor="#7a7a7a" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/back" />
    </LinearLayout>

</ScrollView>