<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stopwatch"
    style="@style/SizeActivityDark"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nameBarTimer"
        style="@style/MenuNoBar"
        android:gravity="center_horizontal"
        android:text="@string/timer" />

    <TextView
        android:id="@+id/timerContainer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/stopwatch"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
 
        <Button
            android:id="@+id/startTimer"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@drawable/defense_start"
            android:text="@string/start" />
    </LinearLayout>

</LinearLayout>