<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:id="@+id/callIcon"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
   
        <TextView
            android:id="@+id/nameCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:maxWidth="100dp"
            android:singleLine="true"
            android:text="@string/hello_world"
            android:textColor="#222222"
            android:textSize="14sp"/>
        
         <ImageView
            android:id="@+id/imageCall"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/stateCall"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/nameCall"
            android:layout_toRightOf="@+id/nameCall"
            android:gravity="center"
            android:padding="3dp"
            android:src="@drawable/misscall" />
        
        <TextView
            android:id="@+id/timeCall"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="#8d8d8d"
            android:textSize="12sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/line"
        android:src="@drawable/spacecall" />

</LinearLayout>